<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:id="@+id/detailmovie"
    android:layout_height="match_parent"
    android:background="@color/background">

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/back"
        app:fabSize="mini"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="15dp"
        android:id="@+id/backBtn"
        app:borderWidth="0dp"
        app:backgroundTint="@color/transparent"
        android:backgroundTint="@color/orange"
        android:tint="@color/white"/>
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:layout_marginRight="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/unfavorites"
        app:fabSize="normal"
        android:layout_marginTop="5dp"
        android:id="@+id/favBtn"
        app:backgroundTint="#FF9800"
        app:borderWidth="0dp"
       />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/background">
            <ProgressBar
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:id="@+id/progress_detail"/>
            <ImageView
                android:id="@+id/backdroppathDetail"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:src="@drawable/placeholder_errors"/>

            <LinearLayout
                android:id="@+id/line1"
                android:layout_marginTop="200dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <androidx.cardview.widget.CardView
                    android:layout_marginLeft="15dp"
                    android:layout_width="150dp"
                    android:layout_height="200dp"
                    app:cardCornerRadius="10dp"
                    android:elevation="1dp"
                    app:cardUseCompatPadding="true">
                    <ImageView
                        android:layout_width="150dp"
                        android:layout_height="200dp"
                        android:src="@drawable/placeholder_errors"
                        android:id="@+id/posterpath"/>
                </androidx.cardview.widget.CardView>
                <LinearLayout
                    android:layout_marginLeft="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="100dp"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/titleDetail"
                        android:text="Joker"
                        android:textSize="17dp"
                        android:textColor="@color/textColor"
                        android:fontFamily="@font/gilroy_regular"
                        android:textStyle="bold"
                        />
                    <TextView
                        android:id="@+id/date_releaseDetail"
                        android:layout_marginTop="5dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="12 May 2020"
                        android:textColor="@color/textColor"
                        android:fontFamily="@font/gilroy"
                        android:textStyle="bold"/>
                    <LinearLayout
                        android:layout_marginTop="5dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="1h 2m"
                            android:id="@+id/durationDetail"
                            android:textSize="13sp"
                            android:textStyle="bold"
                            android:textColor="@color/textColor"
                            android:fontFamily="@font/gilroy_regular"/>

                    </LinearLayout>
                    <RatingBar
                        android:layout_marginTop="15dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:isIndicator="true"
                        android:max="5"
                        android:stepSize="0.1"
                        android:id="@+id/ratingBar"
                        style="?android:attr/ratingBarStyleSmall"
                        android:numStars = "5"
                        android:progressBackgroundTint="@color/textColor"
                        android:progressTint="#FFC107"/>
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_margin="15dp"
                android:layout_below="@+id/line1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Genre"
                    android:textStyle="bold"
                    android:fontFamily="@font/gilroy_regular"
                    android:textColor="@color/textColor"
                    android:textSize="17sp"/>
                <TextView
                    android:id="@+id/genre_movieDetail"
                    android:layout_marginTop="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Drama, Family"
                    android:textStyle="bold"
                    android:fontFamily="@font/gilroy_regular"
                    android:textColor="@color/textColor"
                    android:textSize="13sp"/>
                <TextView
                    android:layout_marginTop="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Synopsis"
                    android:textStyle="bold"
                    android:fontFamily="@font/gilroy_regular"
                    android:textColor="@color/textColor"
                    android:textSize="17sp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:textSize="14sp"
                    android:maxLines="2"
                    android:fontFamily="@font/gilroy_regular"
                    android:id="@+id/descDetail"
                    android:textColor="#AAA6A6"
                    android:text="@string/desc"/>
                <TextView
                    android:id="@+id/txtMore"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/gilroy"
                    android:text="more ......"
                    android:layout_marginTop="5dp"
                    android:textStyle="bold"
                    android:textColor="@color/orange"
                    />
                <TextView
                    android:layout_marginTop="15dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Cast"
                    android:fontFamily="@font/gilroy_regular"
                    android:textStyle="bold"
                    android:textColor="@color/textColor"/>
                <androidx.recyclerview.widget.RecyclerView
                    android:layout_width="match_parent"
                    android:layout_height="220dp"
                    android:id="@+id/rv_cast"/>

                <TextView
                    android:layout_marginTop="15dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Similar Movie"
                    android:fontFamily="@font/gilroy_regular"
                    android:textStyle="bold"
                    android:textColor="@color/textColor"/>
                <TextView
                    android:visibility="gone"
                    android:id="@+id/emptyText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/textColor"
                    android:text="No similar movie found !"
                    android:fontFamily="@font/gilroy_regular"
                    android:layout_centerHorizontal="true"
                    android:gravity="center"
                    android:textStyle="bold"/>
                <androidx.recyclerview.widget.RecyclerView
                    android:layout_width="match_parent"
                    android:layout_height="220dp"
                    android:id="@+id/rv_similar"/>

                <TextView
                    android:layout_marginTop="15dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Recomendations"
                    android:fontFamily="@font/gilroy_regular"
                    android:textStyle="bold"
                    android:textColor="@color/textColor"/>
                <TextView
                    android:visibility="gone"
                    android:id="@+id/emptyTextRecomendation"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/textColor"
                    android:text="No Recomendation movie found !"
                    android:fontFamily="@font/gilroy_regular"
                    android:layout_centerHorizontal="true"
                    android:gravity="center"
                    android:textStyle="bold"/>
                <androidx.recyclerview.widget.RecyclerView
                    android:layout_width="match_parent"
                    android:layout_height="220dp"
                    android:id="@+id/rv_recomendation"/>
                <TextView
                    android:layout_marginTop="15dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Trailers"
                    android:fontFamily="@font/gilroy_regular"
                    android:textStyle="bold"
                    android:textColor="@color/textColor"/>
                <TextView
                    android:visibility="gone"
                    android:id="@+id/emptyTrailers"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/textColor"
                    android:text="No Trailers movie found !"
                    android:fontFamily="@font/gilroy_regular"
                    android:layout_centerHorizontal="true"
                    android:gravity="center"
                    android:textStyle="bold"/>
                <androidx.recyclerview.widget.RecyclerView
                    android:layout_width="match_parent"
                    android:layout_height="260dp"
                    android:id="@+id/rv_video"/>
            </LinearLayout>

        </RelativeLayout>
    </ScrollView>
</RelativeLayout>