...
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="250dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginLeft="50dp"
    android:layout_height="450dp">
    <androidx.cardview.widget.CardView
        android:id="@+id/card_rows"
        android:foregroundGravity="center"
        android:layout_centerHorizontal="true"
        android:layout_width="300dp"
        app:cardCornerRadius="20dp"
        android:elevation="2dp"
        app:cardUseCompatPadding="true"
...
